--- a/Mandarin_NLP_Main.ipynb
+++ b/Mandarin_NLP_Main.ipynb
@@ -11,6 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This project analyzes comments taken from a surveys done by Chinese factory workers. It uses a Chinese NLP package and aims to assess what the major topics of concern for workers are. There are three questions that were asked in the survey. They are in the README section of this Github repository. In this notebook, we will analyze feedback from the following question:\n",
+    "\n",
+    "\"What is some general feedback you would give to management?\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "First we will start by importing neccessary packages and files. "
    ]
   },
